# egglog-duckdb

./: .gitignore  CHANGELOG.md  Cargo.toml  HANDOFF.md  MIGRATION_STATUS.md  MILESTONE1.md  MILESTONE2.md  MILESTONE3.md  MILESTONE4.md  MILESTONE5.md  MILESTONE6.md  PLAN.md  SPIKE_NOTE.md  SPIKE_RESULTS.md  STAGE_B_NOTE.md  STAGE_C_NOTE.md  duckdb-backend-plan.md
.tmp/: backend_trait_refactor_plan.md  feldera_3.sh  feldera_3_results.txt  feldera_results.txt  feldera_results2.txt  feldera_survey.sh  feldera_survey2.sh
benches/: common.rs  rust_api_benchmarking.rs
core-relations/: Cargo.toml
core-relations/src/: common.rs  lib.rs  table_spec.rs
docs/: backend_interface_assessment.md  backend_trait_inventory.md  crates.js  feldera_persistent_circuit_design.md  help.html  settings.html  src-files.js
docs/add_example/: all.html  fn.main.html  fn.run_to_saturation.html  fn.seed_edges.html  fn.setup_schema.html  index.html  sidebar-items.js
docs/differential_dogs3/: all.html  index.html  sidebar-items.js  struct.CollectionExtender.html  struct.CollectionIndex.html  trait.PrefixExtender.html  trait.ProposeExtensionMethod.html  trait.ValidateExtensionMethod.html
docs/egglog/: all.html  constant.GLOBAL_NAME_PREFIX.html  enum.CommandOutput.html  enum.Context.html  enum.Error.html  enum.ResolvedCall.html  enum.RunMode.html  enum.SerializedNode.html  enum.Term.html  enum.TypeError.html  fn.cli.html  fn.file_supports_proofs.html  fn.program_supports_proofs.html  index.html  macro.action.html  macro.actions.html  macro.datatype.html  macro.expr.html  macro.fact.html  macro.facts.html  macro.sort.html  macro.vars.html  sidebar-items.js  struct.CommandMacroRegistry.html  struct.EGraph.html  struct.ExecutionState.html  struct.FelderaBackendConfig.html  struct.FlowlogBackendConfig.html  struct.FullState.html  struct.Function.html  struct.FunctionRow.html  struct.NotFoundError.html  struct.PureState.html  struct.ReadState.html  struct.ResolvedSchema.html  struct.SerializeConfig.html  struct.SerializeOutput.html  struct.SpecializedPrimitive.html  struct.TermDag.html  struct.TypeInfo.html  (+18 more)
docs/egglog_backend_trait/: all.html  enum.ColumnTy.html  enum.DefaultVal.html  enum.MergeFn.html  enum.QueryEntry.html  enum.ReportLevel.html  fn.container_register_val.html  fn.pool_get.html  fn.pool_get_ty.html  fn.pool_register_type.html  fn.pool_unwrap.html  index.html  sidebar-items.js  struct.BaseValueId.html  struct.BaseValues.html  struct.ContainerValueId.html  struct.ExecutionState.html  struct.ExternalFunctionId.html  struct.FunctionConfig.html  struct.FunctionId.html  struct.FunctionRow.html  struct.IterationReport.html  struct.RuleId.html  struct.UfProofConfig.html  struct.Value.html  struct.Variable.html  struct.VariableId.html  trait.Backend.html  trait.BaseValue.html  trait.BaseValuePool.html  trait.ContainerPool.html  trait.ContainerValue.html  trait.DynamicInternTable.html  trait.ExternalFunction.html  trait.RuleBuilderOps.html  type.PanicMsg.html
docs/egglog_bridge/: all.html  enum.ColumnTy.html  enum.DefaultVal.html  enum.Function.html  enum.FunctionConfigError.html  enum.MergeFn.html  enum.QueryEntry.html  index.html  macro.add_expressions.html  macro.define_rule.html  sidebar-items.js  struct.ActionRegistry.html  struct.EGraph.html  struct.FunctionConfig.html  struct.FunctionId.html  struct.FunctionRow.html  struct.RuleBuilder.html  struct.RuleId.html  struct.TableAction.html  struct.UfFunctionConfig.html  struct.UfProofWiring.html  struct.UnionAction.html  struct.Variable.html  struct.VariableId.html  type.LeaderChangeCallback.html  type.Result.html  type.SideChannel.html
docs/egglog_bridge_duckdb/: all.html  enum.Action.html  enum.Atom.html  enum.ColumnTy.html  enum.Literal.html  enum.MergeMode.html  enum.Term.html  fn.q.html  index.html  sidebar-items.js  struct.DuckPairMarker.html  struct.EGraph.html  struct.FunctionInfo.html  struct.NativeCongruenceProof.html  struct.Rule.html
docs/egglog_bridge_feldera/: all.html  index.html  sidebar-items.js  struct.EGraph.html  struct.PrimEngine.html
docs/egglog_bridge_flowlog/: all.html  enum.ExecMode.html  index.html  sidebar-items.js  struct.EGraph.html
docs/egglog_core_relations/: all.html  enum.Constraint.html  enum.MergeVal.html  enum.PlanStrategy.html  enum.ProofReason.html  enum.Subset.html  enum.SubsetRef.html  fn.new_intern_table.html  index.html  sidebar-items.js  struct.AtomId.html  struct.BaseValueId.html  struct.BaseValues.html  struct.Boxed.html  struct.ColumnId.html  struct.ContainerValueId.html  struct.ContainerValues.html  struct.CounterId.html  struct.Database.html  struct.DisplacedTable.html  struct.DisplacedTableWithProvenance.html  struct.ExternalFunctionId.html  struct.Offset.html  (+16 more)
egglog-bridge-duckdb/: Cargo.toml
egglog-bridge-feldera/: Cargo.toml
egglog-bridge-feldera/src/: base_values.rs  circuit_rebuild.rs  compile.rs  dbsp_join.rs  external_func.rs  interpret.rs  lib.rs  rebuild_circuit.rs  rule_builder.rs  uf.rs
egglog-bridge-feldera/tests/: rebuild_circuit_oracle.rs  rebuild_proof.rs  run_n_proof.rs
egglog-bridge-flowlog/: Cargo.toml  build.rs  transitive_step.dl
egglog-bridge-flowlog/src/: base_values.rs  codegen.rs  compile.rs  dd_join.rs  dd_native.rs  engine.rs  external_func.rs  interpret.rs  lib.rs  rule_builder.rs  subprocess.rs  uf.rs
egglog-bridge-flowlog/tests/: dd_join_proof.rs  run_n_proof.rs  run_n_shellout_proof.rs
eval/: BLOCKERS.md  README.md  bench_backends.py  graphs.py
spike-dbsp/: Cargo.toml  rust-toolchain.toml
spike-dbsp/src/: main.rs  persist_probe.rs  rebuild.rs
spike-flowlog/: Cargo.toml  build.rs  path.dl
spike-flowlog/src/: main.rs
src/: cli.rs  constraint.rs  core.rs  duckdb_config.rs  exec_state.rs  extract.rs  lib.rs  prelude.rs  proofs.rs  scheduler.rs  serialize.rs  termdag.rs  typechecking.rs
tests/: api_fact_ops.rs  api_integration.rs  api_query.rs  extract_parity_spotcheck.rs  files.rs  rust_rule_macro.rs  tuple_outputs.rs  typed_primitive.rs  validator_test.rs  wcoj_4clique.egg  wcoj_cycle4_dt.egg  wcoj_cycle4_dt_9.egg  wcoj_square.egg
(+2714 files in other folders)
