[package]
name = "egglog-bridge-flowlog"
version.workspace = true
# The flowlog-rs generated engine + its differential-dataflow / timely
# dependencies are edition-2021 crates; the spike proved the embedding on 2021.
# Keep this member on 2021 to match the proven spike configuration.
edition = "2021"
description = "FlowLog (Differential-Dataflow)-backed executor for egglog's resolved IR. M1: bounded per-iteration (run N) stepping behind the Backend trait via flowlog-rs commit(). M2: runtime rule installation via shell-out — translate the runtime rule to .dl, compile a driver subprocess (cached by rule-set hash), drive it over a pipe. See ../MILESTONE1.md, ../MILESTONE2.md."
license.workspace = true
publish = false

[dependencies]
anyhow = "1"
egglog-backend-trait = { workspace = true }
egglog-core-relations = { workspace = true }
egglog-numeric-id = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
dyn-clone = { workspace = true }
# flowlog-runtime is linked into the build-time-generated incremental engine
# (string interning, txn state, the differential-dataflow / timely re-exports
# the generated `DatalogIncrementalEngine` relies on). Pinned as a GIT dep
# (cargo-managed in ~/.cargo/git, reproducible) rather than a path into /tmp,
# which the OS reaps. runtime 0.2.3 / workspace crates at the pinned rev.
flowlog-runtime = { git = "https://github.com/flowlog-rs/flowlog", rev = "fb0eeb1e9989a24478459a2bfbe3192d8475eb7d" }
# SPIKE (spike-flowlog-dd): raw differential-dataflow + timely, used IN-PROCESS
# by `dd_native.rs` behind `EGGLOG_FLOWLOG_DD_NATIVE=1` to prove a build-once,
# epoch-driven incremental join (the Feldera/DBSP analog). EXACT versions
# already in Cargo.lock (pulled by flowlog-runtime) so no duplicate copies.
differential-dataflow = "=0.24.0"
timely = "=0.30.0"
# `--wcoj` triangle worst-case-optimal join: Frank McSherry's `dogsdogsdogs`
# prefix-extension / AltNeu delta-query operators (`CollectionIndex`, `extend`,
# `extend_using`). Vendored + one-line-patched from crates.io
# `differential-dogs3 = 0.24.0` (the published crate reads `key_con.index(1)`
# of a length-1 key container and panics on every lookup against its own pinned
# differential-dataflow 0.24.0; fixed to `.index(0)` — an upstreamable bug fix).
# Pins the SAME differential-dataflow 0.24.0 / timely 0.30.0 as above, so it
# shares the single copy already in Cargo.lock (zero version conflict). See
# `vendor/differential-dogs3/Cargo.toml` for the patch note.
differential-dogs3 = { path = "vendor/differential-dogs3" }
# serde is needed for the wide ([u32; W>32]) DD binding row: timely's
# `ExchangeData` requires `Serialize + Deserialize`, and serde only derives
# those for arrays up to length 32, so `dd_native::Row` is a newtype with a
# hand-written serde impl over the fixed array.
serde = { workspace = true }

[build-dependencies]
# flowlog-build compiles the bundled, build-time-FIXED `transitive_step.dl`
# into a Rust module (incremental mode -> `DatalogIncrementalEngine`) that
# `lib.rs` include!s. Milestone 1 uses a fixed `.dl`; runtime rule installation
# (the FlowLog crux) is investigated in ../MILESTONE1.md and deferred to M2.
flowlog-build = { git = "https://github.com/flowlog-rs/flowlog", rev = "fb0eeb1e9989a24478459a2bfbe3192d8475eb7d" }

[dev-dependencies]
# The reference backend, used by the milestone-1 proof test to confirm the
# FlowLog backend matches it round-for-round on the same program.
egglog-bridge = { workspace = true }
